--- a/assets/create.html
+++ b/assets/create.html
@@ -1,5 +1,5 @@
 {% extends "admin/challenges/create.html" %}
 
 {% block type %}
-<input type="hidden" value="cggc" name="type" id="chaltype">
+<input type="hidden" value="custom" name="type" id="chaltype">
 {% endblock %}
